[ch15409] fix social buttons alignment

--- a/packages/portal-style/src/pages/_kb-article.scss
+++ b/packages/portal-style/src/pages/_kb-article.scss
@@ -218,6 +218,7 @@
   .btn {
     margin-bottom: 20px;
     margin-left: 0;
+    margin-right: 10px;
   }
 
   .dp-po-oauth {
